# clark

./: meson.build  test.txt
include/starlark/: common.h  lex.h  parse.h  starlark.h
src/cmd/starlark/: main.c
src/starlark/: common.c  int.c  int.h  lex.c  parse.c  strpool.c  strpool.h  util.c  util.h
src/utf8/: utf8.c  utf8.h
src/util/: common.h  diff.c  diff.h  fmt.c  fmt.h  fnv-1a.c  fnv-1a.h  io.c  io.h  lineno.c  lineno.h  panic.c  panic.h  polyfill.c  polyfill.h
tests/: lib.h  meson.build
tests/lex/: comments.txt  comments.txt.expect  identifiers.txt  identifiers.txt.expect  invalid_utf8.txt  invalid_utf8.txt.expect  meson.build  no_whitespace.txt  no_whitespace.txt.expect  numbers.txt  numbers.txt.expect  runner.c  strings.txt  strings.txt.expect  symbols.txt  symbols.txt.expect
tests/parse/: floats.txt  floats.txt.expect  integers.txt  integers.txt.expect  meson.build  runner.c
